--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -7,8 +7,6 @@
 <title></title>
 </head>
 <body>
-
-<br> <br><br><br><br><br><br> <br><br><br><br><br>
 
 
 
@@ -24,11 +22,9 @@ require_once("AG2.php");
 
 
 
-//$turno = $_POST['turno'];
-
 ?>
 
-               <h3>MENU</h3>
+  <h3>MENU</h3>
 				<ul>
 					<li><a href="paginaprincipal.php">Parametros</a></li>
 					<li><a href="outputhorario.php">Resultados</a></li>
